# poetry-lock-package

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  in_docker_test.sh  pyproject.toml  run.sh  run_plugin.sh  test.sh  try_entrypoint.sh  try_plugin.sh
.github/workflows/: codeql.yml  main.yml  publish.yml
poetry-lock-package-requirements/: pyproject.toml
poetry-lock-package-requirements/poetry_lock_package_requirements/: __init__.py
poetry_lock_package/: __init__.py  app.py  lib.py  plugin.py  util.py
test-projects/: run_examples.sh
test-projects/local-include/: pyproject.toml
test-projects/local-include/tests/: test_local_include.py
test-projects/poetry_131/: pyproject.toml
tests/: conftest.py  test_app.py  test_plugin.py  test_poetry_lock_package.py  test_util.py
tests-projects/: README.md  run_examples.sh
tests-projects/CamelCase-example/: pyproject.toml
tests-projects/CamelCase-example/camelcase-example-lock/: pyproject.toml
tests-projects/CamelCase-example/camelcase_example/: __init__.py
tests-projects/local-include/local_include/: __init__.py
tests/resources/: pybluez_git.toml
tests/resources/simply_compleet/: README.md  pyproject.toml
tests/resources/simply_complete/: pyproject.toml
