[tool.poetry]
name = "poetry-lock-package"
version = "0.0.1"
description = "Poetry lock package generator"
authors = ["Bram Neijt <bram@neijt.nl>"]
readme = "README.md"
repository = "https://github.com/bneijt/poetry-lock-package"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.7.0"
toml = "^0.10.1"
importlib-metadata = { version = ">=0.22", python = "<3.8" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
rope = "^0.18.0"
twine = "^3.4.1"
pre-commit = "^2.12.0"
mypy = "^0.991"
types-toml = "^0.10.8.1"
isort = "^5.11.3"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
strict = true
files = "poetry_lock_package"
exclude = "test-projects"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.poetry.scripts]
poetry-lock-package = 'poetry_lock_package.app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
