[tool.poetry]
name = "poetry-lock-package"
version = "0.0.1"
description = "Poetry lock package generator"
authors = ["Bram Neijt <bram@neijt.nl>"]
readme = "README.md"
repository = "https://github.com/bneijt/poetry-lock-package"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Software Development :: Build Tools",
]

[tool.poetry.dependencies]
python = "^3.8.0"
toml = "^0.10.1"
importlib-metadata = { version = ">=0.22", python = "<3.8" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
rope = "^1.6.0"
twine = "^4.0.2"
pre-commit = "^2.20.0"
mypy = "^0.991"
types-toml = "^0.10.8.1"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
strict = true
files = "poetry_lock_package"
exclude = "test-projects"

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.poetry.scripts]
poetry-lock-package = 'poetry_lock_package.app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff.lint]
extend-select = ["I"]