[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poetry-lock-package-requirements"
version = "0.1.0"
description = "Poetry lock package generator requirements package"
authors = [ "A. Bram Neijt <bram@neijt.nl>",]

[tool.poetry.dependencies]
atomicwrites = "==1.4.0"
attrs = "==20.3.0"
colorama = "==0.4.4"
more-itertools = "==8.7.0"
packaging = "==20.9"
pluggy = "==0.13.1"
py = "==1.10.0"
pyparsing = "==2.4.7"
pytest = "==5.4.3"
wcwidth = "==0.2.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
poetry-lock-package = "poetry_lock_package.app:main"
