[tool.poetry]
name = "local-include"
version = "0.1.0"
description = ""
authors = ["Bram Neijt <bram@neijt.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
camelcase-example = {path = "../CamelCase-example", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
