[tool.poetry]
name = "simply-complete"
version = "0.0.1"
description = "Example"
authors = ["This Is <a@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
toml = "^0.10.1"
importlib-metadata = { version = ">=0.22", python = "<3.8" }
poetry = "^1"
poetry-plugin-export = "^1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.12.1"
rope = "^1.6.0"
twine = "^4.0.2"
pre-commit = "^2.20.0"
mypy = "^0.991"
types-toml = "^0.10.8.1"
isort = "^5.11.3"
ruff = "^0.1.14"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
strict = true
files = "poetry_lock_package"
exclude = "test-projects"

[tool.poetry.scripts]
poetry-lock-package = 'poetry_lock_package.app:main'

[tool.poetry.plugins."poetry.application.plugin"]
build-lock-command = "poetry_lock_package.plugin:LockPackagePlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
